example/lib/src/generated/errors/errors_localization_ru.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Russian (`ru`).
class ErrorsLocalizationRu extends ErrorsLocalization {
  ErrorsLocalizationRu([String locale = 'ru']) : super(locale);

  @override
  String get error => 'Произошла ошибка';

  @override
  String get unexpectedError => 'Произошла неизвестная ошибка';

  @override
  String get bugReportSentText => 'Отчёт об ошибке успешно отправлен.';
}
